--- a/Checklists-UIKit/Base.lproj/Main.storyboard
+++ b/Checklists-UIKit/Base.lproj/Main.storyboard
@@ -7,7 +7,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Checklist View Controller-->
+        <!--Checklists-->
         <scene sceneID="K06-3u-m9D">
             <objects>
                 <tableViewController id="bzA-pN-4w8" customClass="ChecklistViewController" customModule="Checklists_UIKit" customModuleProvider="target" sceneMemberID="viewController">
@@ -44,7 +44,7 @@
                             <outlet property="delegate" destination="bzA-pN-4w8" id="hT9-5r-yGE"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" id="aVs-Be-ITb"/>
+                    <navigationItem key="navigationItem" title="Checklists" id="aVs-Be-ITb"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="DMB-Pe-uWk" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
