--- a/Checklists-UIKit/Base.lproj/Main.storyboard
+++ b/Checklists-UIKit/Base.lproj/Main.storyboard
@@ -63,7 +63,7 @@
         <!--Add Item-->
         <scene sceneID="XhX-UX-kAA">
             <objects>
-                <tableViewController id="GEG-HJ-gzP" sceneMemberID="viewController">
+                <tableViewController id="GEG-HJ-gzP" customClass="AddItemViewControllerTableViewController" customModule="Checklists_UIKit" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="XGT-nh-WVq">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
