Change style of cell to static, add textfield, no border.

--- a/Checklists-UIKit/Base.lproj/Main.storyboard
+++ b/Checklists-UIKit/Base.lproj/Main.storyboard
@@ -64,20 +64,37 @@
         <scene sceneID="XhX-UX-kAA">
             <objects>
                 <tableViewController id="GEG-HJ-gzP" customClass="AddItemViewControllerTableViewController" customModule="Checklists_UIKit" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="XGT-nh-WVq">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="grouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" id="XGT-nh-WVq">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                        <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="nQk-vv-ttv">
-                                <rect key="frame" x="0.0" y="24.5" width="320" height="43.5"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="nQk-vv-ttv" id="NlS-UI-GJx">
-                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                </tableViewCellContentView>
-                            </tableViewCell>
-                        </prototypes>
+                        <sections>
+                            <tableViewSection id="53a-yZ-5t4">
+                                <cells>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="nQk-vv-ttv">
+                                        <rect key="frame" x="0.0" y="18" width="320" height="43.5"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="nQk-vv-ttv" id="NlS-UI-GJx">
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="oQy-V2-bhZ">
+                                                    <rect key="frame" x="16" y="4" width="288" height="34.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <textInputTraits key="textInputTraits"/>
+                                                </textField>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="bottom" secondItem="oQy-V2-bhZ" secondAttribute="bottom" constant="5.5" id="I4u-gs-vEW"/>
+                                                <constraint firstItem="oQy-V2-bhZ" firstAttribute="top" secondItem="NlS-UI-GJx" secondAttribute="top" constant="4" id="Sz5-IQ-GJV"/>
+                                                <constraint firstAttribute="trailing" secondItem="oQy-V2-bhZ" secondAttribute="trailing" constant="16" id="ZHT-cb-GGB"/>
+                                                <constraint firstItem="oQy-V2-bhZ" firstAttribute="leading" secondItem="NlS-UI-GJx" secondAttribute="leading" constant="16" id="jcL-aZ-U97"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </cells>
+                            </tableViewSection>
+                        </sections>
                         <connections>
                             <outlet property="dataSource" destination="GEG-HJ-gzP" id="rx8-F1-cPs"/>
                             <outlet property="delegate" destination="GEG-HJ-gzP" id="GCO-pJ-ycd"/>
@@ -98,7 +115,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qmr-Wb-c9z" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1181" y="65"/>
+            <point key="canvasLocation" x="1179.375" y="64.436619718309856"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="vqi-Wx-oJ5">
