Re-arrange code in ChecklistViewController, AddItemViewController. Cancel, done buttons still not working.

--- a/Checklists-UIKit/Base.lproj/Main.storyboard
+++ b/Checklists-UIKit/Base.lproj/Main.storyboard
@@ -50,7 +50,7 @@
                     <navigationItem key="navigationItem" title="Checklists" id="aVs-Be-ITb">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="ea9-l3-JNK">
                             <connections>
-                                <segue destination="GEG-HJ-gzP" kind="show" id="kh6-bC-GIE"/>
+                                <segue destination="GEG-HJ-gzP" kind="show" identifier="addItem" id="ftM-9g-rdY"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -63,7 +63,7 @@
         <!--Add Item-->
         <scene sceneID="XhX-UX-kAA">
             <objects>
-                <tableViewController id="GEG-HJ-gzP" customClass="AddItemViewControllerTableViewController" customModule="Checklists_UIKit" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController id="GEG-HJ-gzP" customClass="AddItemViewController" customModule="Checklists_UIKit" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="grouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" id="XGT-nh-WVq">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
